--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,12 @@
 {
-    "presets": [
-      ["@babel/preset-env", {
-        "targets": "> 0.25%, not dead"
-      }]
-    ]
+  "plugins": [
+		"@babel/plugin-proposal-class-properties",
+		"@babel/plugin-transform-runtime"
+	],
+  "presets": [
+    ["@babel/react"],
+    ["@babel/preset-env", {
+      "targets": "> 0.25%, not dead"
+    }]
+  ]
 }
