--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@tomtom-international/web-sdk-maps": "^6.18.0",
-    "axios": "^0.25.0",
     "autoprefixer": "^10.4.4",
+    "axios": "^0.25.0",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
@@ -53,7 +53,11 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "awesome-bootstrap-checkbox": "^1.0.1",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
+    "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.0.0",
@@ -61,7 +65,9 @@
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-simple-typewriter": "^3.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "typewriter-effect": "^2.18.2"
   }
 }
